// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`estimate drift — totals per fixture > galley: total range snapshot 1`] = `
{
  "confirmedBandPct": 12,
  "displayedBandPct": 15,
  "high": 7852,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 5867,
}
`;

exports[`estimate drift — totals per fixture > island: total range snapshot 1`] = `
{
  "confirmedBandPct": 9,
  "displayedBandPct": 12,
  "high": 5524,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 4334,
}
`;

exports[`estimate drift — totals per fixture > l-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 14,
  "displayedBandPct": 17,
  "high": 8469,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 6069,
}
`;

exports[`estimate drift — totals per fixture > peninsula: total range snapshot 1`] = `
{
  "confirmedBandPct": 10,
  "displayedBandPct": 13,
  "high": 7512,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 5812,
}
`;

exports[`estimate drift — totals per fixture > single: total range snapshot 1`] = `
{
  "confirmedBandPct": 11,
  "displayedBandPct": 15,
  "high": 3574,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 2671,
}
`;

exports[`estimate drift — totals per fixture > u-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 14,
  "displayedBandPct": 17,
  "high": 12192,
  "lines": [
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "sinkTaps",
    "appliances",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 8733,
}
`;
